kubernetes/apps/openclaw/openclaw/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/service.json
apiVersion: v1
kind: Service
metadata:
  name: openclaw
spec:
  ports:
    - protocol: TCP
      port: 18080
      targetPort: 18080
